# headfirst_design_pattern

./: .gitignore  .pre-commit-config.yaml  .pylintrc  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.github/: .README.swp  labeler.yml  md  pull_request_template.md
.github/workflows/: pull-request.yaml  python.yaml
env-setup/setup/: WINDOW_SETUP.md  init_window.py  install-dependency.sh  setup-window.sh
hooks/: install.sh
setup/: WINDOW_SETUP.md  init_window.py  setup-window.sh
src/: __init__.py
src/Ducksimulator/: base_duck.py  fly_behavior.py  run.py
src/cafeordersimulator/: beverage.py  condiment.py  test.py
src/candy_machine/: candy.py  dummy.py  interface.py  machine.py  state.py  state_interface.py  states.py  test.py
src/ducksimulator/: base.py  quack_behavior.py
src/factory_pattern/: pizza.py
src/factory_pattern/factory_method/: fm_test.py  pizza.py  pizzastore.py
src/factory_pattern/simple_factory/: pizza.py  pizzastore.py  simplepizzafactory.py
src/lkh/Ducksimulator/: base_duck.py  fly_behavior.py  quack_behavior.py  run.py
src/monitoring_app/: displays.py  interfaces.py  monitor_test.py  weatherdata.py  weatherstation.py
src/template_pattern/: caffeinebeverage.py  template_test.py
test/: candy_machine_test.py  duck_simul_test.py
tests/candymachine/: candy_machine_test.py
tests/ducksimulator/: test.py
tests/ducksimulator_test/: ducksimulator_test.py
tests/monitoring_app/: monitor_test.py
